--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,6 @@
 name = "Thesis"
+
 [deps]
+DFControl = "1e31e15d-4957-550d-a244-318eced754ae"
+DFWannier = "5e267647-ebb4-5b7d-bc28-1d3eda37ab19"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
