more work on Rashba

--- a/Project.toml
+++ b/Project.toml
@@ -4,3 +4,4 @@ name = "Thesis"
 DFControl = "1e31e15d-4957-550d-a244-318eced754ae"
 DFWannier = "5e267647-ebb4-5b7d-bc28-1d3eda37ab19"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
