--- a/Project.toml
+++ b/Project.toml
@@ -4,5 +4,7 @@ name = "Thesis"
 DFControl = "1e31e15d-4957-550d-a244-318eced754ae"
 DFWannier = "5e267647-ebb4-5b7d-bc28-1d3eda37ab19"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
