lot of work on Gd

--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ DFWannier = "5e267647-ebb4-5b7d-bc28-1d3eda37ab19"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 GdMn2O5 = "6961f11a-a989-11ea-3ed1-411831970d49"
+Glimpse = "f6e19d58-12a4-5927-8606-ac30a9ce9b69"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
