--- a/Project.toml
+++ b/Project.toml
@@ -9,5 +9,6 @@ GdMn2O5 = "6961f11a-a989-11ea-3ed1-411831970d49"
 Glimpse = "f6e19d58-12a4-5927-8606-ac30a9ce9b69"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+PStdLib = "81de72d6-94f4-11e9-3d35-4feaf5d5fb7f"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
