--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,9 @@ GdMn2O5 = "6961f11a-a989-11ea-3ed1-411831970d49"
 Glimpse = "f6e19d58-12a4-5927-8606-ac30a9ce9b69"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+OpenSSL_jll = "458c3c95-2e84-50aa-8efc-19380b2a3a95"
+PDFIO = "4d0d745f-9d9a-592e-8d18-1ad8a0f42b92"
 PStdLib = "81de72d6-94f4-11e9-3d35-4feaf5d5fb7f"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
+Zlib_jll = "83775a58-1f1d-513f-b197-d71354ab007a"
