finished the Gd chapter!

--- a/Project.toml
+++ b/Project.toml
@@ -1,22 +1,8 @@
-name = "Thesis"
-
 [deps]
-BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
-BTO = "5fb9f698-aa0b-11e8-3d94-87c774b35c7b"
+CImGui = "5d785b6c-b76f-510e-a07c-3070796c7e87"
 CrSDW = "dc637f32-2dd5-11e9-17d4-3d77e321c8d7"
-DFControl = "1e31e15d-4957-550d-a244-318eced754ae"
-DFWannier = "5e267647-ebb4-5b7d-bc28-1d3eda37ab19"
-DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 GdMn2O5 = "6961f11a-a989-11ea-3ed1-411831970d49"
-Glimpse = "f6e19d58-12a4-5927-8606-ac30a9ce9b69"
-JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
-JuAFEM = "30d91d44-8115-11e8-1d28-c19a5ac16de8"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
-Landau = "5fb9f698-aa0b-11e8-3d94-87c774b35c7c"
-OpenSSL_jll = "458c3c95-2e84-50aa-8efc-19380b2a3a95"
-PDFIO = "4d0d745f-9d9a-592e-8d18-1ad8a0f42b92"
 PStdLib = "81de72d6-94f4-11e9-3d35-4feaf5d5fb7f"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
-PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
-Zlib_jll = "83775a58-1f1d-513f-b197-d71354ab007a"
