--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 CImGui = "5d785b6c-b76f-510e-a07c-3070796c7e87"
+ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 CrSDW = "dc637f32-2dd5-11e9-17d4-3d77e321c8d7"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 GdMn2O5 = "6961f11a-a989-11ea-3ed1-411831970d49"
