--- a/.gitignore
+++ b/.gitignore
@@ -416,3 +416,5 @@ $RECYCLE.BIN/
 # Many thanks to `https://gitignore.io/`, written and maintained by Joe Blau, which contributed much material to this gitignore file.
 
 papers/Thesis\.pdf
+
+papers/Thesis_revised\.pdf
